ferric/tests/ui/semantic_err_01.stderr
error: duplicate declaration of variable `sprinkler`
  --> tests/ui/semantic_err_01.rs:28:9
   |
28 |     let sprinkler : bool ~ Bernoulli::new( 0.2 );
   |         ^^^^^^^^^
